<resources>


        <string name="app_name">EventsApp</string>
        <string name="login_upper">LOGIN</string>
        <string name="register_upper">REGISTER</string>
        <string name="username">Username</string>
        <string name="email">Email</string>
        <string name="password">Password</string>

        <string name="welcome">Welcome</string>
        <string name="default_username">admin</string>
        <string name="events_upper">EVENTS</string>
        <string name="my_events_upper">MY EVENTS</string>
        <string name="friends_upper">FRIENDS</string>

        <string name="no_events">Nema dostupnih događaja</string>

        <string name="interested_events_upper">INTERESTED EVENTS</string>
        <string name="attending_events_upper">ATTENDING EVENTS</string>
        <string name="my_profile_upper">MY PROFILE</string>

        <string name="interested_events">Interested Events</string>

        <string name="attending_events">Attending Events</string>


        <string name="default_email">email@gmail.com</string>
        <string name="password_upper">PASSWORD</string>
        <string name="end_session_upper">END SESSION</string>

        <string name="change_password">Change password</string>
        <string name="current_password">Current password</string>
        <string name="new_password">New password</string>
        <string name="save_upper">SAVE</string>

        <string name="all">SVE</string>
        <string name="party">PARTY</string>
        <string name="festival">FESTIVAL</string>
        <string name="concert">CONCERT</string>
        <string name="theater">STAND-UP &amp; THEATER</string>
        <string name="exhibition">EXHIBITION</string>
        <string name="add_event">DODAJ EVENT</string>

        <string name="featured">FEATURED</string>
        <string name="event_name">Naziv događaja</string>
        <string name="event_category">Kategorija</string>
        <string name="event_location">Lokacija</string>
        <string name="event_date_time">Datum i vreme</string>
        <string name="free_places">Slobodnih mesta</string>

        <string name="free_places_format">Slobodnih mesta: %1$d/%2$d</string>

        <string name="event_description">Opis događaja</string>
        <string name="no_ratings">Još uvek nema ocena</string>
        <string name="average_rating_format">Prosečna ocena: %1$.1f (%2$d ocena)</string>
        <string name="interested_upper">INTERESTED</string>
        <string name="attending_upper">ATTENDING</string>
        <string name="added_to_interested">Dodat u zainteresovane.</string>
        <string name="added_to_attending">Prijavili ste se na događaj.</string>

        <string name="no_interested_events">Nemate zainteresovanih događaja</string>

        <string name="upcoming_events">Predstojeći događaji</string>
        <string name="past_events">Prošli događaji</string>
        <string name="no_attending_events">Nemate prijavljenih događaja</string>
        <string name="rate_upper">OCENI</string>
        <string name="rating_title">Oceni događaj</string>

        <string name="confirm_rating">POTVRDI OCENU</string>
        <string name="select_rating_error">Odaberite ocenu pre potvrde.</string>
        <string name="rating_saved">Ocena je sačuvana.</string>
        <string name="star">★</string>

        <string name="event_name_hint">Naziv događaja</string>
        <string name="description_hint">Opis</string>
        <string name="location_hint">Lokacija</string>
        <string name="date_time_hint">dd.MM.yyyy HH:mm</string>
        <string name="capacity_hint">Kapacitet</string>
        <string name="promoted_event">Promoted event</string>
        <string name="create_event_upper">KREIRAJ EVENT</string>
        <string name="required_fields_error">Popunite sva obavezna polja.</string>
        <string name="capacity_error">Unesite ispravan kapacitet.</string>
        <string name="event_created">Događaj uspešno kreiran.</string>

        <string-array name="event_categories">
                <item>Party</item>
                <item>Festival</item>
                <item>Stand-Up &amp; Theater</item>
                <item>Concert</item>
                <item>Exhibition</item>
        </string-array>

        <string name="event_create_error">Greška prilikom kreiranja događaja</string>
        <string name="already_added_or_error">Već postoji zapis ili je došlo do greške</string>
        <string name="attending_error">Nije moguće prijaviti prisustvo</string>
        <string name="category">Kategorija</string>
        <string name="rating_error">Ocena nije sačuvana ili ste već ocenili ovaj događaj</string>

        <string name="friends_activity_upper">FRIENDS ACTIVITY</string>
        <string name="no_friends_activity">Nema aktivnosti prijatelja</string>

        <string name="register_as_admin">Register as admin</string>
</resources>