<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCreateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/event_name_hint" />

    <EditText
        android:id="@+id/etCreateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/description_hint" />

    <EditText
        android:id="@+id/etCreateLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/location_hint" />

    <EditText
        android:id="@+id/etCreateDateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/date_time_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerCreateCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/category" />

    <CheckBox
        android:id="@+id/cbPromoted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/promoted_event" />

    <EditText
        android:id="@+id/etCreateCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/capacity_hint"
        android:inputType="number"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event_upper" />

</LinearLayout>