<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/tvProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_username"
        android:layout_gravity="center"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_email"
        android:layout_gravity="center"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password_upper" />


    <Button
        android:id="@+id/btnEndSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/end_session_upper" />

</LinearLayout>