<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventItemRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvFeatured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/featured"
            android:textColor="@color/white"
            android:background="@color/purple_500"
            android:padding="4dp"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerInside" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textColor="@color/gray_text"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_category"
            android:textColor="@color/purple_500"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvEventDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_date_time"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvFreePlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/free_places"
            android:textColor="@color/purple_500"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>