<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Pocetni layout -->
    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_upper" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_upper" />
    </LinearLayout>

    <!-- Login layout -->
    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/etLoginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnDoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_upper" />
    </LinearLayout>

    <!-- Register layout -->
    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Username -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/username" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- Admin checkbox -->
        <CheckBox
            android:id="@+id/cbRegisterAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_as_admin" />

        <!-- Dugme -->
        <Button
            android:id="@+id/btnDoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_upper" />

    </LinearLayout>

</LinearLayout>